z-index issue fixed

--- a/src/AboutUs/AboutUs.css
+++ b/src/AboutUs/AboutUs.css
@@ -10,6 +10,11 @@
     background-color: #fff;
 }
 
+#aboutus .president-section,
+#aboutus .club-history {
+    font-family: "Lucida Console", "Courier New", monospace;
+}
+
 #aboutus .president-section {
     width: 70%;
     padding: 30px 15px;
@@ -34,8 +39,8 @@
 }
 
 #aboutus .club-history .photo-circle {
-    width: 200px;
-    height: 200px;
+    width: 300px;
+    height: 300px;
     background: url('../img/gal_img_2.jpg') center no-repeat;
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
     background-size: cover;
@@ -54,7 +59,8 @@
         min-height: 100vh;
     }
 
-    #aboutus .president-section .photo-circle {
+    #aboutus .president-section .photo-circle,
+    #aboutus .club-history .photo-circle {
         width: 200px;
         height: 200px;
         margin-top: 50px;
@@ -62,7 +68,6 @@
 
     .president-section,
     .club-history {
-        font-family: "Lucida Console", "Courier New", monospace;
         display: flex;
         flex-direction: column;
         align-items: center;
